# bazel-cargo-demo

./: Cargo.toml  README.md  WORKSPACE.bazel
my-client/: BUILD.bazel  Cargo.toml
my-client/src/: args.rs  main.rs  run.rs
my-lib/: BUILD.bazel  Cargo.toml  build.rs
my-lib/src/: error.rs  lib.rs  proto.rs  result.rs
my-lib/src/data_access/: mod.rs  widget_repo.rs
my-lib/src/object_model/: mod.rs  widget.rs
my-proto/: BUILD.bazel
my-server/: BUILD.bazel  Cargo.toml
my-server/src/: args.rs  main.rs  run.rs  service.rs
proto/: BUILD.bazel
proto/src/: adder.proto
scripts/: utils.bzl
