workspace(name = "my-app")

load("//scripts:utils.bzl", "load_http_archive")

HTTP_ARCHIVES = {
    "com_github_grpc_grpc": {
        "name": "com_github_grpc_grpc",
        "sha256": "ea9a1b7505e7bc992e82794f0765025d711c411a3ea5402ce1048afc88be8301",
        "strip_prefix": "grpc-{tag}",
        "urls": [
            "https://github.com/grpc/grpc/archive/refs/tags/v{tag}.zip",
        ],
        "tag": "1.46.5",
    },
    "rules_proto": {
        "name": "rules_proto",
        "sha256": "80d3a4ec17354cccc898bfe32118edd934f851b03029d63ef3fc7c8663a7415c",
        "strip_prefix": "{name}-{tag}",
        "urls": [
            "https://github.com/bazelbuild/{name}/archive/refs/tags/{tag}.tar.gz",
        ],
        "tag": "5.3.0-21.5",
    },
    "rules_proto_grpc": {
        "name": "rules_proto_grpc",
        "sha256": "bbe4db93499f5c9414926e46f9e35016999a4e9f6e3522482d3760dc61011070",
        "strip_prefix": "{name}-{tag}",
        "urls": ["https://github.com/rules-proto-grpc/{name}/archive/{tag}.tar.gz"],
        "tag": "4.2.0",
    },
    "rules_rust": {
        "name": "rules_rust",
        "sha256": "6bfe75125e74155955d8a9854a8811365e6c0f3d33ed700bc17f39e32522c822",
        "urls": [
            "https://mirror.bazel.build/github.com/bazelbuild/{name}/releases/download/{tag}/{name}-v{tag}.tar.gz",
            "https://github.com/bazelbuild/{name}/releases/download/{tag}/{name}-v{tag}.tar.gz",
        ],
        "tag": "0.9.0",
    },
}

load_http_archive(HTTP_ARCHIVES["rules_rust"])

load("@rules_rust//rust:repositories.bzl", "rules_rust_dependencies", "rust_register_toolchains")

rules_rust_dependencies()

rust_register_toolchains(edition = "2021")

load("@rules_rust//crate_universe:repositories.bzl", "crate_universe_dependencies")

crate_universe_dependencies()

load("@rules_rust//crate_universe:defs.bzl", "crates_repository")

crates_repository(
    name = "crate_index",
    cargo_lockfile = "//:Cargo.lock",
    lockfile = "//:Cargo.Bazel.lock",
    manifests = [
        "//:Cargo.toml",
        "//my-client:Cargo.toml",
        "//my-lib:Cargo.toml",
        "//my-server:Cargo.toml",
    ],
)

load("@crate_index//:defs.bzl", "crate_repositories")

crate_repositories()

load_http_archive(HTTP_ARCHIVES["rules_proto"])

load("@rules_proto//proto:repositories.bzl", "rules_proto_dependencies", "rules_proto_toolchains")

rules_proto_dependencies()

rules_proto_toolchains()

load_http_archive(HTTP_ARCHIVES["com_github_grpc_grpc"])

load("@com_github_grpc_grpc//bazel:grpc_deps.bzl", "grpc_deps")

grpc_deps()

load("@com_github_grpc_grpc//bazel:grpc_extra_deps.bzl", "grpc_extra_deps")

grpc_extra_deps()

load_http_archive(HTTP_ARCHIVES["rules_proto_grpc"])

load("@rules_proto_grpc//:repositories.bzl", "rules_proto_grpc_repos", "rules_proto_grpc_toolchains")

rules_proto_grpc_toolchains()

rules_proto_grpc_repos()
