load("@crate_index//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_test")

SRCS = [
    "src/args.rs",
    "src/main.rs",
    "src/run.rs",
]

rust_binary(
    name = "my-client",
    srcs = SRCS,
    deps = [
        "//my-lib",
    ] + all_crate_deps(),
)

rust_test(
    name = "my-client-test",
    crate = ":my-client",
)
