load("@crate_index//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library")
load("@rules_rust//cargo:cargo_build_script.bzl", "cargo_build_script")

cargo_build_script(
    name = "proto_build_script",
    srcs = ["build.rs"],
    build_script_env = {
        "PROTOC": "$(execpath @com_google_protobuf//:protoc)",
    },
    data = [
        "//my-proto",
        "@com_google_protobuf//:protoc",
    ],
    deps = all_crate_deps(build = True),
)

rust_library(
    name = "my-lib",
    srcs = ["src/lib.rs"],
    visibility = ["//visibility:public"],
    deps = [
        ":proto_build_script",
    ] + all_crate_deps(),
)
