load("@crate_index//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
load("@rules_rust//cargo:cargo_build_script.bzl", "cargo_build_script")

SRCS = [
    "src/result.rs",
    "src/error.rs",
    "src/object_model/mod.rs",
    "src/object_model/widget.rs",
    "src/proto.rs",
    "src/data_access/widget_repo.rs",
    "src/data_access/mod.rs",
    "src/lib.rs",
]

cargo_build_script(
    name = "proto_build_script",
    srcs = ["build.rs"],
    build_script_env = {
        "RUNNING_IN_BAZEL": "1",
        "PROTOC": "$(execpath @com_google_protobuf//:protoc)",
    },
    data = [
        "//proto",
        "@com_google_protobuf//:protoc",
    ],
    deps = all_crate_deps(build = True),
)

rust_library(
    name = "my-lib",
    srcs = SRCS,
    visibility = ["//visibility:public"],
    deps = [
        ":proto_build_script",
    ] + all_crate_deps(),
)

rust_test(
    name = "my-lib-test",
    crate = ":my-lib",
)
