[package]
name = "my-lib"
version = "0.1.0"
edition = "2021"

[build-dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
path-absolutize = "3.1.0"
tonic-build = "0.9.2"

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
prost = "0.11.9"
thiserror = "1.0.40"
tonic = "0.9.2"
