load("@crate_index//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_test")

SRCS = [
    "src/args.rs",
    "src/main.rs",
    "src/run.rs",
    "src/service.rs",
]

rust_binary(
    name = "my-server",
    srcs = SRCS,
    deps = [
        "//my-lib",
    ] + all_crate_deps(),
)

rust_test(
    name = "my-server-test",
    crate = ":my-server",
)
