[package]
name = "my-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
clap = { version = "4.3.4", features = ["derive", "env"] }
my-lib = { path = "../my-lib" }
tokio = { version = "1.28.2", features = ["full"] }
tonic = "0.9.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
